--- a/src/components/quickCmdsModal.component.pug
+++ b/src/components/quickCmdsModal.component.pug
@@ -6,8 +6,7 @@
             autofocus, 
             placeholder='Ctrl + Enter send to all', 
             (ngModelChange)='refresh()',
-            (keyup.enter)='quickSend()',
-            (keyup.control.enter)='quickSendAll()',
+            (keyup)='handleKeydown($event)',
         )
         toggle.ml-1(
             title="Automatically append a '\\n' char to the end",
@@ -15,7 +14,7 @@
         )
 
     .list-group.mt-3.connections-list
-        ng-container(*ngFor='let group of childGroups') 
+        ng-container(*ngFor='let group of childGroups; let i = index')
             .list-group-item.list-group-item-action.d-flex.align-items-center(
                 (click)='clickGroup(group, $event)',
                 title="Shift + Click send all to active tab\nCtrl + Shift + Click send all to all tabs",
@@ -26,6 +25,7 @@
             ng-container(*ngIf='!groupCollapsed[group.name]')
                 .list-group-item.list-group-item-action.pl-5.d-flex.align-items-center(
                     *ngFor='let cmd of group.cmds', 
+                    [ngClass]="{'active': i === selectedIndex}", 
                     (click)='send(cmd, $event)',
                     title="Ctrl + Click send to all",
                 )
